register.html implement tipoUsuário on front end

--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clique Vagas Caruaru</title>
+    <title>voluntárioJobs</title>
     <link rel="stylesheet" href="style/principal.css"/>
     <link rel="stylesheet" href="style/usuario.css"/>
 </head>
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="titulo bg1">
         <a href="index.php"> <img src="images/logo.png"/></a>
-        <a class="limpartitulo" href="index.php"> Clique Vagas Caruaru</a>
+        <a class="limpartitulo" href="index.php"> voluntárioJobs</a>
     </div>
     <div class="conteudo">
         <div class="tema">
@@ -23,9 +23,8 @@
             <form method="POST" action="model/cadastrar_usuario.php">
                 <p>Nome :</p>
                 <input class="caixanome" type="text" name="nome" placeholder="Digite o nome"/>
-                <p>Tipo usuário :</p>
-                <p>Exemplo : Voluntário ou Empresa </p>
-                <input class="caixanome" type="text" name="nome" placeholder="Digite o nome"/>
+                <p>Tipo Usuário : </p>
+                <input class="caixanome" type="text" name="nome" placeholder="ONG ou Voluntário"/>
                 <p>E-mail:</p>
                 <input class="caixaemail" type="email" name="email" placeholder="Digite o e-mail"/>
                 <p>Senha:</p>
