implemented tipoUsuario in cadastrar_usuario.php

--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
                 <p>Nome :</p>
                 <input class="caixanome" type="text" name="nome" placeholder="Digite o nome"/>
                 <p>Tipo Usuário : </p>
-                <input class="caixanome" type="text" name="nome" placeholder="ONG ou Voluntário"/>
+                <input class="caixanome" type="text" name="tipoUsuario" placeholder="ONG ou Voluntário"/>
                 <p>E-mail:</p>
                 <input class="caixaemail" type="email" name="email" placeholder="Digite o e-mail"/>
                 <p>Senha:</p>
